<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg"
    tools:context=".ui.auth.signin.SignInFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/sign_in_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/copperplate_bold"
        android:text="Email Address"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/email_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/email_bg"
        android:hint="@string/enter_here"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_12ssp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <TextView
        android:id="@+id/password_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_12ssp"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_ly" />


    <EditText
        android:id="@+id/password_ly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/email_bg"
        android:hint="@string/enter_here"
        android:inputType="textPassword"
        android:padding="@dimen/_12ssp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password_lb"
        app:layout_constraintTop_toBottomOf="@+id/password_lb" />

    <CheckBox
        android:id="@+id/remember_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/password_ly"
        app:layout_constraintTop_toBottomOf="@+id/password_ly" />

    <TextView
        android:id="@+id/remember_me_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/remember"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="@+id/remember_check"
        app:layout_constraintStart_toEndOf="@+id/remember_check"
        app:layout_constraintTop_toTopOf="@+id/remember_check" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="@+id/remember_check"
        app:layout_constraintEnd_toEndOf="@+id/password_ly"
        app:layout_constraintTop_toTopOf="@+id/remember_check" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_17sdp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/log_in"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remember_me_tv" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/copperplate_light"
        android:text="@string/don_t_have_an_account"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2ssp"
        android:fontFamily="@font/copperplate_bold"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/copperplate_bold"
        android:text="Sign In"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>