<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sign_in_bg"
    tools:context=".ui.auth.membership.MemberShipFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:fontFamily="@font/copperplate_bold"
        android:text="MemberShip"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/copperplate_bold"
        android:text="$20.00"
        android:textColor="@color/white"
        android:textSize="@dimen/_36ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/copperplate_bold"
        android:text="Pay Now"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pay_now_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/copperplate_bold"
        android:text="Pay Now"
        android:layout_marginEnd="@dimen/_14sdp"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cvc_ly"
        app:layout_constraintStart_toStartOf="@+id/expiry_date_ET" />


    <TextView
        android:id="@+id/expiry_tv_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/expire_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/expiry_date_ET"
        app:layout_constraintStart_toStartOf="@+id/expiry_date_ET" />

    <EditText
        android:id="@+id/expiry_date_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:background="@drawable/email_bg"
        android:padding="@dimen/_12ssp"
        android:text="MM-YYYY"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/copperplate_light"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/pay_now_btn"
        app:layout_constraintEnd_toStartOf="@+id/cvc_ly"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cvc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/cvc"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/expiry_date_ET"
        app:layout_constraintStart_toStartOf="@+id/cvc_ly" />


    <EditText
        android:id="@+id/cvc_ly"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_17sdp"
        android:background="@drawable/email_bg"
        android:padding="@dimen/_12ssp"
        android:text="000"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:fontFamily="@font/copperplate_light"
        app:layout_constraintBottom_toBottomOf="@+id/expiry_date_ET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/expiry_date_ET" />

    <EditText
        android:id="@+id/card_number_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/email_bg"
        android:padding="@dimen/_12ssp"
        android:text="0000-0000-0000-0000"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/copperplate_light"
        android:layout_marginBottom="@dimen/_12sdp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/expiry_tv_lb"
        app:layout_constraintEnd_toEndOf="@+id/cvc_ly"
        app:layout_constraintStart_toStartOf="@+id/expiry_date_ET" />

    <TextView
        android:id="@+id/card_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/card_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/card_number_ET"
        app:layout_constraintStart_toStartOf="@+id/card_number_ET" />

    <EditText
        android:id="@+id/card_holder_ET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/email_bg"
        android:fontFamily="@font/copperplate_light"
        android:padding="@dimen/_12ssp"
        android:text="@string/enter_here"
        android:layout_marginBottom="@dimen/_12sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/card_number_tv"
        app:layout_constraintEnd_toEndOf="@+id/cvc_ly"
        app:layout_constraintStart_toStartOf="@+id/expiry_date_ET" />

    <TextView
        android:id="@+id/card_holder_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/copperplate_bold"
        android:text="@string/card_holder"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/card_holder_ET"
        app:layout_constraintStart_toStartOf="@+id/card_number_ET" />

</androidx.constraintlayout.widget.ConstraintLayout>