<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.component.TextDialogFragment">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10ssp"
        android:fontFamily="@font/copperplate_bold"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="7.6"
        android:text="HIGHLIGHTS"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="@+id/gold_open"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guidelin11"
        app:layout_constraintTop_toTopOf="@+id/gold_open" />


    <TextView
        android:id="@+id/textView18"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10ssp"
        android:fontFamily="@font/copperplate_bold"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="7.6"
        android:text="OF THE MONTH"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="@+id/gold_close"
        app:layout_constraintEnd_toEndOf="@+id/gold_close"
        app:layout_constraintStart_toStartOf="@+id/gold_close"
        app:layout_constraintTop_toBottomOf="@+id/gold_note_plate" />

    <ImageView
        android:id="@+id/gold_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:elevation="@dimen/_7sdp"
        android:src="@drawable/bg_gold_plate"
        app:layout_constraintBottom_toTopOf="@+id/gold_note_plate"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <ImageView
        android:id="@+id/gold_note_plate"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/bg_old"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/gold_close"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/gold_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20ssp"
        android:adjustViewBounds="true"
        android:elevation="@dimen/_7sdp"
        android:src="@drawable/bg_gold_plate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        android:id="@+id/scroll_data"
        android:visibility="gone"
        android:scrollbars="none"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@+id/gold_note_plate"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="@+id/guidelin11"
        app:layout_constraintTop_toBottomOf="@+id/gold_open">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/time_make_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/closeness_regular"
                android:text="@string/time_maker"
                android:textColor="#071A53"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_make_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/closeness_regular"
                android:gravity="center"
                android:text="~ Be Mindful that all Calendar dates and times are based on Jerusalem Time. "
                android:textColor="#382B1A"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_make_label_tv" />


            <TextView
                android:id="@+id/high_holy_days_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:fontFamily="@font/closeness_regular"
                android:text="@string/high_holy_days"
                android:textColor="#071A53"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_make_tv" />


            <TextView
                android:id="@+id/high_holy_days_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/closeness_regular"
                android:gravity="center"
                android:textColor="#382B1A"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/high_holy_days_label_tv"
                tools:text="@string/lorum_ipsum" />

            <TextView
                android:id="@+id/memorial_days_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:fontFamily="@font/closeness_regular"
                android:text="@string/memorial_days"
                android:textColor="#071A53"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/high_holy_days_tv" />

            <TextView
                android:id="@+id/memorial_days_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/closeness_regular"
                android:gravity="center"
                android:text="@string/lorum_ipsum"
                android:textColor="#382B1A"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memorial_days_label_tv" />

            <TextView
                android:id="@+id/constellation_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/closeness_regular"
                android:text="@string/constellation_label"
                android:textColor="#071A53"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memorial_days_tv" />

            <TextView
                android:id="@+id/constellation_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/closeness_regular"
                android:gravity="center"
                android:text="@string/lorum_ipsum"
                android:textColor="#382B1A"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constellation_label_tv" />

            <TextView
                android:id="@+id/biblical_history_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:fontFamily="@font/closeness_regular"
                android:text="@string/biblical_history_label"
                android:textColor="#071A53"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constellation_tv" />

            <TextView
                android:id="@+id/biblical_history_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/closeness_regular"
                android:gravity="center"
                android:text="@string/lorum_ipsum"
                android:textColor="#382B1A"
                android:textSize="@dimen/_9ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/biblical_history_label_tv" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelin11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="" />


</androidx.constraintlayout.widget.ConstraintLayout>